# vi:ft=toml:
#
# See more keys and their definitions at
#   https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "rust-door-knocker"
version = "0.1.0"
edition = "2021"
default-run = "knock"

[[bin]]
name = "knock"
path = "src/knock.rs"

[[bin]]
name = "door"
path = "src/door.rs"

[dependencies]
exec = "0.3.1"
ring = "0.16.20"
data-encoding = "2.3.2"
clap = { version = "3.2.8", features = [ "cargo" ] }
syslog = "^6.0"
log = { version = "0.4.17", features = [ "std" ] }
